--- a/RaspberryPi Server/css/style.css
+++ b/RaspberryPi Server/css/style.css
@@ -4,9 +4,16 @@ html, body {
 }
 
 div.graphs {
-  height: 400px;
-  width: 100%;
+  height: 450px;
+  width: 750px;
   border: 1px solid black;
+  display: inline-block;
+}
+div.title {
+  height: 50px;
+  width: 750px;
+  border: 0px solid black;
+  display: inline-block;
 }
 .axis path,
 .axis line {
@@ -19,12 +26,14 @@ div.graphs {
 .path {
     stroke: steelblue;
     stroke-width: 2;
-    fill: none;
+    fill: red;
 }
 .help_line {
     stroke: gray;
 }
-
+.SD_area {
+    opacity: 0.25;
+}
 
 .axis g.tick text{
   font-size: 12px;
